# DuoHash

./: CMakeLists.txt  ReadMe.md  makefile
example/: all_methods.cpp  main.cpp
example/TestInputFile/: paired.txt  reads_800.txt  small_test.txt
include/: DuoHash.h
include/Hash/: HashFunction.h  HashType.h  MultiHashFunction.h
include/Spaced/: MultiSpacedQmer.h  SpacedQmer.h  SpacedQmer_Multi.h
src/Spaced/: MultiSpacedQmer.cpp  SpacedQmer.cpp
